* Rework AuditPlugin to use the fos-rollover project (and not logback anymore) * Some moves in maven dependencies